# vsketch

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  README.rst  justfile  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: python-build-release.yml  python-lint-tests.yml  python-lint.yml  python-tests.yml  release.yml  test-quality.yml
docs/: .gitignore  Makefile  conf.py  contributing.rst  index.rst  install.rst  overview.rst  reference.rst  requirements.txt
docs/_static/css/: label.css
docs/_templates/: base.html
docs/_templates/autoapi/: index.rst  macros.rst
docs/_templates/autoapi/python/: class.rst  module.rst
examples/: .gitignore  README.md  detail.ipynb  fill.ipynb  google_colab.ipynb  noise_bezier.ipynb  points_transform.py  polygons.ipynb  prime_circles.ipynb  quick_draw.ipynb  random.ipynb  shapely.ipynb  subsketch.ipynb  transforms.ipynb  vsketch_google_colab_basic_setup.ipynb
examples/_notebooks/: README.md  bezier_bugs.ipynb  detail.ipynb  noise_bezier.ipynb  polygons.ipynb  prime_circles.ipynb  quick_draw.ipynb  random.ipynb  shapely.ipynb  stroke_fill.ipynb  subsketch.ipynb  transforms.ipynb
examples/basic_plotloop/: sketch_basic_plotloop.py
examples/bezier_bugs/: sketch_bezier_bugs.py
examples/detail/: sketch_detail.py
examples/easing/: sketch_easing.py
examples/easing/output/: .gitignore
examples/hidden_line_removal/: sketch_hidden_line_removal.py
examples/noise_bezier/: sketch_noise_bezier.py
examples/noise_plotloop/: sketch_noise_plotloop.py
examples/noise_plotloop/output/: .gitignore
examples/point_transform/: sketch_point_transform.py
examples/polygons/: sketch_polygons.py
examples/postcard/: postcard.py
examples/prime_circles/: sketch_prime_circles.py
examples/quick_draw/: sketch_quick_draw.py
examples/quick_draw/config/: a6_landscape.json
examples/quick_draw/output/: .gitignore
examples/random_flower/: sketch_random_flower.py
examples/random_lines/: sketch_random_lines.py
examples/random_seed/: sketch_random_seed.py
examples/schotter/: sketch_schotter.py
examples/shape_basic/: sketch_shape_basic.py
examples/shape_basic/output/: .gitignore
examples/shape_pixel/: sketch_shape_pixel.py
examples/shape_playground/: sketch_shape_playground.py
examples/shapely/: sketch_shapely.py
examples/simple_sketch/: .gitignore  sketch.py
examples/stroke_fill/: sketch_stroke_fill.py
examples/stroke_join/: sketch_stroke_join.py
examples/subsketch/: sketch_subsketch.py
examples/text_layout/: text_layout.py
examples/transforms/: sketch_transforms.py
tests/: conftest.py  data.py  test_arc.py  test_circle.py  test_curves.py  test_detail.py  test_easing.py  test_ellipse.py  test_examples.py  test_fill.py  test_geometry.py  test_line.py  test_misc.py  test_notebooks.py  test_param.py  test_point.py  test_polygon.py  test_primitives.py  test_quad.py  test_random.py  test_rect.py  test_rectMode.py  test_save.py  test_size.py  test_sketch.py  test_square.py  test_stroke.py  test_transforms.py  test_triangle.py  utils.py
vsketch/: __init__.py  curves.py  display.py  easing.py  environment.py  fill.py  noise.py  param.py  plot.py  shape.py  sketch_class.py  style.py  utils.py  vsketch.py
vsketch_cli/: cli.py  config_widget.py  gui.py  param_widget.py  run.py  seed_widget.py  sketch_runner.py  sketch_viewer.py  threads.py  utils.py
