[tool.poetry]
name = "vsketch"
version = "1.0.0-alpha.0"
description = "Plotter generative art environment"
authors = ["Antoine Beyeler <abeyeler@ab-ware.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abey79/vsketch"
documentation = "https://vsketch.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
packages = [
    { include = "vsketch" },
    { include = "vsketch_cli" },
]
include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.scripts]
vsk = "vsketch_cli.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7, !=3.9.0, <3.10"
bezier = ">=2021.2.12"
colorama = "^0.4.4"
cookiecutter = "^1.7.2"
matplotlib = "^3.3.3"
multiprocess = "^0.70.11"
numpy = "^1.20.1"
pnoise = "^0.1.0"
PySide2 = "^5.15.2"
qasync = "^0.15.0"
Shapely = {extras = ["vectorized"], version = "^1.7.1"}
vpype = { version = "1.7.0", extras = ["all"] }
watchgod = "^0.7"

# colab
requests = {version = "^2.25.1", optional = true}

# jupyterlab
jupyterlab = {version = "^3.0.1", optional = true}
jupyter_nbextensions_configurator = {version = "^0.4.1", optional = true}
jupyterlab-code-formatter = {version = "^1.4.1", optional = true}
ipympl = {version = "^0.7.0", optional = true}
black = {version = "^21.5b2", optional = true}
isort = {version = "^5.10.1", optional = true}

# these needs to be there because of https://github.com/python-poetry/poetry/issues/1145
Sphinx = { version = "^3.4.3", optional = true }
sphinx-autodoc-typehints = { version = "^1.12.0", optional = true }
sphinx-rtd-theme = { version = "^0.5.1", optional = true }
recommonmark = { version = ">=0.6,<0.8", optional = true }


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-benchmark = "^3.4.1"
mypy = ">=0.901"
types-requests = "^0.1.9"
jupyter = "^1.0.0"
nbconvert = "^6.0.7"
nbformat = "^5.0.8"
jupyter-client = "^6.1.7"
isort = "^5.7.0"
black = "^21.5b2"


[tool.poetry.extras]
jupyterlab = ["jupyterlab", "jupyter_nbextensions_configurator", "jupyterlab", "ipympl", "black", "isort"]
colab = ["requests"]
docs = ["Sphinx", "sphinx-click", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "recommonmark"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 95
target-version = ["py36", "py37", "py38"]


[tool.isort]
profile = "black"
line_length = 95
src_paths = ["vsketch", "vsketch_cli", "tests"]  # first party
known_third_party = ["shapely"]


[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disallow_incomplete_defs = true
files = "vsketch,vsketch_cli,examples,tests"
