[tool.poetry]
name = "vsketch"
version = "1.0.0-alpha.0"
description = "Plotter generative art environment"
authors = ["Antoine Beyeler <abeyeler@ab-ware.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abey79/vsketch"
documentation = "https://vsketch.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
packages = [
    { include = "vsketch" },
    { include = "vsketch_cli" },
]
include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.scripts]
vsk = "vsketch_cli.cli:cli"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
colorama = "^0.4.4"
cookiecutter = ">=2.1"
matplotlib = "^3.3.3"
multiprocess = ">=0.70"
numpy = ">=1.20.1"
pnoise = ">=0.2.0"
PySide2 = "^5.15.2"
qasync = ">=0.22"
Shapely = {extras = ["vectorized"], version = "1.8.2"}
vpype = {extras = ["all"], git = "https://github.com/abey79/vpype", rev = "6a099b7b4f3d756f7fa8052049be365d0314c5ee"}
watchfiles = ">=0.12"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.4"
mypy = ">=0.901"
types-requests = ">=2.0"
isort = ">=5.10.1"
black = ">=22.1"


[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_notebooks.py"  # no longer supported
testpaths = ["tests"]

[tool.black]
line-length = 95
target-version = ["py38", "py39", "py310"]


[tool.isort]
profile = "black"
line_length = 95
src_paths = ["vsketch", "vsketch_cli", "tests"]  # first party
known_third_party = ["shapely"]


[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disallow_incomplete_defs = true
files = "vsketch,vsketch_cli,examples,tests"
