[tool.poetry]
name = "vsketch"
version = "1.1.0"
description = "Plotter generative art environment"
authors = ["Antoine Beyeler <abeyeler@ab-ware.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abey79/vsketch"
documentation = "https://vsketch.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
packages = [
    { include = "vsketch" },
    { include = "vsketch_cli" },
]
include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.scripts]
vsk = "vsketch_cli.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cookiecutter = ">=2.1"
matplotlib = ">=3.3.3"
multiprocess = ">=0.70"
numpy = ">=1.20.1"
pnoise = ">=0.2.0"
PySide6 = ">=6.3.2"
Shapely = {extras = ["vectorized"], version = ">=1.8.2"}
vpype = {extras = ["all"], version = "1.14"}
# vpype = { extras = ["all"], git = "https://github.com/abey79/vpype/", branch = "master" }
watchfiles = ">=0.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.4"
mypy = ">=0.901"
types-requests = ">=2.0"
isort = ">=5.10.1"
black = ">=22.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = ">=2022.4.7"
sphinx = ">=4.5.0"
myst_parser = ">=0.17.0"
sphinx-copybutton = ">=0.5.0"
sphinx-autoapi = ">=1.8.4"
sphinx-autobuild = ">=2021.3.14"


[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_notebooks.py"  # no longer supported
testpaths = ["tests"]

[tool.black]
line-length = 95
target-version = ["py38", "py39", "py310"]


[tool.isort]
profile = "black"
line_length = 95
src_paths = ["vsketch", "vsketch_cli", "tests"]  # first party
known_third_party = ["shapely"]


[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disallow_incomplete_defs = true
check_untyped_defs = true
files = "vsketch,vsketch_cli,examples,tests"
